[package]
name = "cpu-stress-test"
version = "2.1.0"
edition = "2018"
description = "A CPU stresstest, fully saturating CPU resources"
repository = "https://gitlab.com/schmensch/rust-stress-test"
license = "LGPL-3.0"
keywords = ["stresstest"]
categories = ["command-line-utilities"]
include = ["src/**/*", "Cargo.toml"]

[dependencies]
num_cpus = "1.13.0"
device_query = "0.2.3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
